# image2image

./: .gitattributes  .github_changelog_generator  .gitignore  404.html  CITATION.cff  CLAUDE.md  LICENSE  README.md  WARP.md  changelog.html  index.html  justfile  mkdocs.yml  planned.html  pyproject.toml  reqs.txt  request.html  sitemap.xml  uvbox.toml
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
_template/: changelog-template.html
apps/: convert.html  crop.html  elastix.html  fusion.html  merge.html  na.html  register.html  valis.html  viewer.html
changelogs/: index.html  v0.1.10.html  v0.1.11.html  v0.1.14.html  v0.1.15.html  v0.2.3.html  v0.3.0.html
dialogs/: channel-selection.html
docs/_template/: changelog-template.md
docs/apps/: elastix.md
docs/changelogs/: index.md  v0.1.10.md  v0.1.11.md  v0.1.14.md  v0.1.15.md  v0.2.3.md  v0.3.0.md
docs/dialogs/: channel-selection.md
icon/: convert_svg.sh  icon.icns  png_to_icon.bat  svg_to_icns.sh  svg_to_ico.sh  svg_to_icons.sh
package/: image2image.spec
package/_hooks/: hook-deps.py  hook-image2image.py  hook-imagecodecs.py  hook-imageio.py  hook-imzy.py  hook-itk.py  hook-locals.py  hook-misc.py  hook-napari.py  hook-numba.py  hook-psygnal.py  hook-qt.py  hook-qtextra.py  hook-rasterio.py  hook-scipy.py  hook-sitk.py  hook-sklearn.py  hook-valis.py  hook-vispy.py  hook-xsdata.py
package/_runtimehooks/: hook-bundle.py  hook-mpl.py  hook-multiprocessing.py
package/macos-pyinstaller/: build.sh  bundle.sh  image2image.spec  image2image_split.spec  notes.md  package.sh  print_versions.py  rename.py  run_image2image.bat
package/windows-pyinstaller/: build.ps1  image2image.spec  image2image_split.spec  installer.iss  installer.ps1  zip.bat  zip.ps1  zip.py
package/windows-pyinstaller/hooks/: hook-imagecodecs.py  hook-itk.py  hook-numba.py  hook-scipy.py  hook-sitk.py  hook-sklearn.py
scratch/: 2024_03_11_valis_reg.ipynb  2024_09_24_valis_reg.ipynb  2024_10_06_valis_reg.ipynb  2024_10_30_fix_czi.ipynb  2025_03_07_geojson.ipynb  2025_09_08_fix_czi.ipynb  2025_10_06_spatial_pca.ipynb  2025_10_10_improve_preview.ipynb  2025_11_19_fix_czi.ipynb  2025_12_19_multiscene_czi.ipynb  2026_01_14_join_czi.ipynb  2026_02_23_tma.ipynb
scripts/: activate_venv_rosetta.sh  check_version.py  create_macos_env.sh  create_win_env.ps1  git_pull.sh  git_push.sh  importtime.bat  install_win.ps1  package_app_linux.py  package_app_linux_rename.py  package_app_macos_rename.py  package_app_win_zip.py  print_versions.py  reinstall_deps.sh  rename_app_macos.py  update_uv_macos_env.sh  update_uv_win_env.ps1  zip_app_win.py
search/: search_index.js  search_index.json
src/image2image/: __init__.py  __main__.py  __main_convert__.py  __main_crop__.py  __main_elastix__.py  __main_fusion__.py  __main_register__.py  __main_viewer__.py  _console.py  _dialogs.py  _reader.py  _select.py  _sentry.py  cli.py  config.py  constants.py  dialog_base.py  dialog_crop.py  dialog_export.py  dialog_register.py  dialog_viewer.py  enums.py  event_loop.py  launcher.py  main.py  models.py  utilities.py
src/image2image/_dialogs/: __init__.py  _about.py  _channels.py  _dataset.py  _fiducials.py  _locate.py  _misc.py  _scalebar.py  _shortcuts.py  _transform.py  _update.py
src/image2image/assets/: __init__.py  icon.icns
src/image2image/assets/stylesheets/: 01_buttons.qss  01_custom.qss  02_icons.qss  04_napari.qss  06_custom.qss  10_custom.qss
src/image2image/models/: __init__.py  base.py  data.py  misc.py  threed.py  transform.py  transformation.py  utilities.py  wsiprep.py
src/image2image/qt/: _dialog_base.py  _dialog_mixins.py  _dialog_wsi.py  _mixins.py  _select.py  _sentry.py  dialog_base.py  dialog_convert.py  dialog_crop.py  dialog_elastix.py  dialog_elastix3d.py  dialog_export.py  dialog_fusion.py  dialog_merge.py  dialog_register.py  dialog_runner.py  dialog_threed.py  dialog_valis.py  dialog_viewer.py  dialog_volume.py  dialog_wsiprep.py  dialog_wsireg.py  event_loop.py  helpers.py  launcher.py
src/image2image/qt/_dialogs/: __init__.py  _about.py  _animation.py  _channels.py  _close.py  _dataset.py  _errors.py  _extract.py  _fiducials.py  _initial.py  _iterate.py  _list.py  _locate.py  _mask.py  _misc.py  _preprocess.py  _rename.py  _save.py  _scalebar.py  _screenshot.py  _select.py  _sentry.py  _shortcuts.py  _sysinfo.py  _transform.py  _tutorial.py  _update.py  _wsiprep.py
src/image2image/qt/_register/: _fiducials.py  _guess.py  _preprocess.py  _select.py
src/image2image/qt/_runner/: _buttons.py  _card.py  _constants.py  _overlap.py  utilities.py
src/image2image/qt/_viewer/: _mask.py  _transform.py
src/image2image/qt/_wsi/: _attachment.py  _list.py  _mask.py  _network.py  _paths.py  _preprocessing.py  _widgets.py
src/image2image/qt/_wsiprep/: _wsiprep.py
src/image2image/qt/_wsireg/: _attachment.py  _list.py  (+6 more)
src/image2image/readers/: _base_reader.py  _czi.py  array_reader.py  base.py  base_reader.py  coordinate_reader.py  czi.py  czi_reader.py  geojson_reader.py  geojson_utils.py  h5_reader.py  tiff_reader.py  utilities.py
src/image2image/utils/: crop.py  download.py  fiducials.py  mask.py  system.py  transform.py  utilities.py  valis.py
src/image2micro/: _dialogs.py  _reader.py  cli.py  dialog_register.py  main.py  models.py
src/image2micro/assets/: __init__.py
src/image2micro/readers/: base.py  coordinate_reader.py  czi_reader.py
src/ims2micro/: __init__.py  _appdirs.py  _console.py  _dialogs.py  _ims_reader.py  _micro_reader.py  _reader.py  _select.py  _table.py  _version.py  cli.py  config.py  dialog.py  dialog_old.py  dialog_register.py  enums.py  event_loop.py  main.py  models.py  utilities.py
src/ims2micro/assets/: __init__.py
src/ims2micro/readers/: base.py  coordinate_reader.py  czi.py  czi_reader.py  tiff_reader.py  utilities.py
tests/: test_assets.py  test_cli.py  test_dataset_dialog.py  test_dialog.py  test_dialog_runner.py  test_elastix.py  test_extract_dialog.py  test_register.py  test_tutorials.py  test_utilities.py  test_viewer.py  test_windows.py
(+5 files in other folders)
